Fixed logo image link not wrapping properly around the image

--- a/styles/base.less
+++ b/styles/base.less
@@ -62,6 +62,10 @@ a:visited {
     #logoImage {
       margin: 0;
 
+      a {
+        display: block;
+      }
+
       img {
         max-height: @logoSize;
         width: auto;
